--- a/Frontend/AppComponents/UI/Styles/header.module.css
+++ b/Frontend/AppComponents/UI/Styles/header.module.css
@@ -1,11 +1,12 @@
 .header {
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     height: 75px;
     display: grid;
     grid-template-columns: 1.25fr 0.75fr;
     grid-template-rows: 80px;
 }
 .header h1 {
+    font-family: Arial, Helvetica, sans-serif;
     margin-left: 100px;
     font-size: 30px;
 }
@@ -16,21 +17,29 @@
 }
 .configBtn {
     height: 40px;
+    width: 50px;
     margin-top: 17.5px;
     margin-left: 20px;
     font-weight: bold;
 }
 .settings {
+    border-radius: 5px;
+    background-color: whitesmoke;
+    height: 100px;
+    width: 85px;
     position: relative;
     bottom: 18px;
 }
 .settings button{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
     width: 80px;
     display: block;
     border: none;
-    margin-bottom: 5px;
+    margin-block: 15px;
     text-decoration: underline;
-    background-color: white;
+    background-color: whitesmoke;
     &:hover {
         color: red;
     }
@@ -43,6 +52,7 @@
     align-items: center;
 }
 .main_content_options button {
+    font-family: Arial, Helvetica, sans-serif;
     height: 35px;
     margin-bottom: 5px;
     background-color: rgb(93, 92, 92);
@@ -51,11 +61,12 @@
     color: white;
     &:hover {
         transform: scale(1.025);
+        color: goldenrod;
     }
 }
 .main_content_options .activeBtn {
     background-color: black;
-    color: white;
+    color: goldenrod;
     box-shadow: 0 0 10px goldenrod;
     text-decoration: underline;
 }
