--- a/Frontend/AppComponents/Styles/signUp.module.css
+++ b/Frontend/AppComponents/Styles/signUp.module.css
@@ -54,3 +54,63 @@
         color: white;
     }
 }
+.error {
+    color: red;
+    font-size: 12px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+@media (max-width: 540px) {
+    .container {
+        background: white;
+        height: 95vh;
+        width: 95vw;
+        display: flex;
+        margin-inline: auto;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        background-size: cover;
+    }
+
+    .form {
+        width: 80vw;
+        height: 480px;
+        border-radius: 10px;
+        background-color: whitesmoke;
+        box-shadow: 0 0 10px rgb(205, 202, 202);
+        text-align: center;
+        overflow: hidden;
+    }
+
+    .form h1 {
+        font-size: 24px;
+    }
+
+    .form input {
+        width: 60vw;
+        height: 25px;
+        margin-top: 10px;
+        font-size: 16px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+    .form button {
+        width: 45%;
+        height: 40px;
+        font-size: 16px;
+        border-radius: 5px;
+    }
+
+    .error {
+        font-size: 10px;
+    }
+
+    .footer {
+        font-size: 14px;
+        margin-top: 20px;
+    }
+}
