--- a/Frontend/AppComponents/UI/Styles/header.module.css
+++ b/Frontend/AppComponents/UI/Styles/header.module.css
@@ -5,16 +5,19 @@
     grid-template-columns: 1.25fr 0.75fr;
     grid-template-rows: 80px;
 }
+
 .header h1 {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 100px;
     font-size: 30px;
 }
+
 .title_and_settings {
     display: grid;
     grid-template-columns: 50px 1fr;
     gap: 10px;
 }
+
 .configBtn {
     height: 40px;
     width: 50px;
@@ -22,6 +25,7 @@
     margin-left: 20px;
     font-weight: bold;
 }
+
 .settings {
     border-radius: 5px;
     background-color: whitesmoke;
@@ -30,7 +34,8 @@
     position: relative;
     bottom: 18px;
 }
-.settings button{
+
+.settings button {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: bold;
@@ -40,10 +45,12 @@
     margin-block: 15px;
     text-decoration: underline;
     background-color: whitesmoke;
+
     &:hover {
         color: red;
     }
 }
+
 .main_content_options {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -51,6 +58,7 @@
     padding: 5px;
     align-items: center;
 }
+
 .main_content_options button {
     font-family: Arial, Helvetica, sans-serif;
     height: 35px;
@@ -59,11 +67,13 @@
     border: none;
     border-radius: 7.5px;
     color: white;
+
     &:hover {
         transform: scale(1.025);
         color: goldenrod;
     }
 }
+
 .main_content_options .activeBtn {
     background-color: black;
     color: goldenrod;
@@ -71,3 +81,49 @@
     text-decoration: underline;
 }
 
+@media (max-width: 540px) {
+    .header {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        height: 17.5vh;
+        width: 100vw;
+        overflow: hidden;
+        background-size: cover;
+    }
+
+    .main_content_options {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 5px;
+        padding: 5px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main_content_options button {
+        font-family: Arial, Helvetica, sans-serif;
+        height: 32px;
+        background-color: rgb(93, 92, 92);
+        border: none;
+        border-radius: 7.5px;
+        color: white;
+    
+        &:hover {
+            transform: scale(1.025);
+            color: goldenrod;
+        }
+    }
+
+    .title_and_settings {
+        display: grid;
+        grid-template-columns: 75px 1fr;
+        gap: 10px;
+    }
+
+    .header h1 {
+        text-align: left;
+        font-size: 1.5em;
+        margin-left: 22.5px;
+        display: flex;
+    }
+}
