--- a/Frontend/AppComponents/UI/Components/FinancesContent/Styles/expenses.module.css
+++ b/Frontend/AppComponents/UI/Components/FinancesContent/Styles/expenses.module.css
@@ -98,23 +98,19 @@
         width: 100vw;
         height: 75vh;
         margin: 0 auto;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-y: scroll;
+        overflow-x: scroll;
         background-color: darkgrey;
         border-radius: 15px;
-        background-size: cover;
-        overflow: hidden;
     }
     .expenses_container {
         width: 98vw;
         height: 75vh;
         margin: 0 auto;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-y: scroll;
+        overflow-x: scroll;
         background-color: darkgrey;
         border-radius: 15px;
-        background-size: cover;
-        overflow: hidden;
     }
     .expenses_container table {
         width: 90vw;
