--- a/Frontend/AppComponents/UI/Styles/finances.module.css
+++ b/Frontend/AppComponents/UI/Styles/finances.module.css
@@ -4,7 +4,6 @@
 @media (max-width: 540px) {
     .finances {
         height: 75vh;
-        background-size: cover;
-        overflow: hidden;
+        overflow: scroll;
     }
 }
