--- a/Frontend/AppComponents/UI/Components/FinancesContent/Styles/expenses.module.css
+++ b/Frontend/AppComponents/UI/Components/FinancesContent/Styles/expenses.module.css
@@ -47,6 +47,7 @@
     margin-inline: auto;
     background-color: rgb(210, 218, 218);
     text-align: center;
+    overflow: hidden;
 }
 .new_expense_container button {
     height: 30px;
