--- a/Frontend/AppComponents/UI/Components/FinancesContent/Styles/incomes.module.css
+++ b/Frontend/AppComponents/UI/Components/FinancesContent/Styles/incomes.module.css
@@ -99,8 +99,8 @@
         width: 100vw;
         height: 75vh;
         margin: 0 auto;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-y: scroll;
+        overflow-x: scroll;
         background-color: darkgrey;
         border-radius: 15px;
         background-size: cover;
@@ -110,8 +110,8 @@
         width: 98vw;
         height: 75vh;
         margin: 0 auto;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-y: scroll;
+        overflow-x: scroll;
         background-color: darkgrey;
         border-radius: 15px;
         background-size: cover;
